<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/newGoalTitle"
        android:id="@+id/textView10"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/name"
        android:layout_marginTop="30dp"
        android:text="@string/goalName"
        android:layout_below="@+id/textView10"
        android:paddingLeft="0dp"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/goalname"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textView12"
        android:text="@string/goalDesc"
        android:paddingLeft="0dp"
        android:layout_below="@+id/goalname"
        android:layout_alignLeft="@+id/goalname"
        android:layout_alignStart="@+id/goalname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText8"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textView13"
        android:text="@string/goalAmount"
        android:paddingLeft="0dp"
        android:layout_below="@+id/editText8"
        android:layout_alignLeft="@+id/editText8"
        android:layout_alignStart="@+id/editText8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/totalgoalcost"
        android:layout_below="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textView14"
        android:text="@string/goalDate"
        android:paddingLeft="0dp"
        android:layout_below="@+id/totalgoalcost"
        android:layout_alignLeft="@+id/totalgoalcost"
        android:layout_alignStart="@+id/totalgoalcost"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText10"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:id="@+id/textView15"
        android:text="@string/goalOr"
        android:paddingLeft="0dp"
        android:layout_below="@+id/editText10"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/green"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textView16"
        android:text="@string/goalAmountPerMonth"
        android:paddingLeft="0dp"
        android:layout_below="@+id/textView15"
        android:layout_alignLeft="@+id/editText10"
        android:layout_alignStart="@+id/editText10"
        android:layout_alignRight="@+id/editText10"
        android:layout_alignEnd="@+id/editText10" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText11"
        android:layout_below="@+id/textView16"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goalSetGoal"
        android:id="@+id/button5"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editText11"
        android:layout_alignEnd="@+id/editText11"
        android:onClick="setGoal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        android:id="@+id/button6"
        android:textColor="@color/white"
        android:background="@color/red"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editText11"
        android:layout_alignStart="@+id/editText11"
        android:onClick="Goals"/><![CDATA[
 
    /> 
]]>
</RelativeLayout>