<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_marginTop="101dp"
        android:text="@string/email"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textView"
        android:text="@string/password"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:editable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/editEmail"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:editable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        style="@style/button"
        android:layout_below="@+id/password"
        android:enabled="true"
        android:background="@color/teal"
        android:ems="4"
        android:clickable="true"
        android:onClick="login_attempt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:id="@+id/button2"
        android:layout_marginBottom="79dp"
        style="@style/button"
        android:background="@color/teal"
        android:ems="5"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:clickable="true"
        android:onClick="NewUser"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView2"
        android:textColor="@color/green"
        android:textSize="32dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout> 