<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:rowCount="7"
    android:columnCount="73">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/spendingTitle"
        android:id="@+id/textView9"
        android:layout_row="0"
        android:layout_column="3"
        android:textColor="@color/green"
        android:textSize="30sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/spendingViewChart"
        android:id="@+id/button4"
        android:layout_column="72"
        android:padding="0dp"
        android:layout_row="0"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:layout_marginLeft="-50dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/btnBack"
        android:id="@+id/button9"
        android:layout_column="3"
        android:padding="0dp"
        android:layout_row="4"
        android:textColor="@color/white"
        android:background="@color/lightRed"
        android:onClick="HomeScreen"
        android:layout_marginLeft="0dp"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="375dp"
        android:id="@+id/listView"
        android:layout_row="6"
        android:layout_column="3"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:paddingTop="0dp"
        />

</GridLayout>