<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:rowCount="7"
    android:columnCount="73">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/goalTitle"
        android:id="@+id/textView9"
        android:layout_row="0"
        android:layout_column="3"
        android:textColor="@color/green"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/newGoal"
        android:id="@+id/button4"
        android:layout_column="72"
        android:padding="0dp"
        android:layout_row="0"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:onClick="newGoal"
        android:layout_above="@+id/goalsback"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="37dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/btnBack"
        android:id="@+id/goalsback"
        android:layout_column="3"
        android:padding="0dp"
        android:layout_row="2"
        android:textColor="@color/white"
        android:background="@color/lightRed"
        android:onClick="HomeScreen"
        android:layout_toEndOf="@+id/GoalsList"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:id="@+id/GoalsList"
        android:layout_row="5"
        android:layout_column="3"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:paddingTop="0dp"
        android:layout_below="@+id/goalsback"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="175dp"
        android:layout_height="375dp"
        android:id="@+id/GoalListNumbers"
        android:layout_row="5"
        android:layout_column="3"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:paddingTop="0dp"
        android:layout_toEndOf="@+id/GoalsList"
        android:layout_alignTop="@+id/GoalsList" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="Add"
        android:id="@+id/button14"
        android:layout_column="72"
        android:padding="0dp"
        android:layout_row="0"
        android:textColor="@color/white"
        android:background="@color/teal"
        android:onClick="addFunds"
        android:layout_alignTop="@+id/goalsback"
        android:layout_alignStart="@+id/button4" />


</RelativeLayout>